correct alignment of ticks

--- a/style.css
+++ b/style.css
@@ -28,10 +28,10 @@ body {
     height: 1rem;
     border-radius: 50%;
     width: 1rem;
-    transform-origin: calc(100% + 13rem + 3px);
+    transform-origin: calc(100% + 13rem + 0.5rem);
     position: absolute;
-    top: calc(50% - 3px);
-    right: calc(50% + 13rem + 3px);
+    top: calc(50% - 0.5rem);
+    right: calc(50% + 13rem + 0.5rem);
     z-index: -1;
 }
 
